--- a/AzureApp/AzureApp.Common.Tests/AzureApp.Common.Tests.csproj
+++ b/AzureApp/AzureApp.Common.Tests/AzureApp.Common.Tests.csproj
@@ -62,6 +62,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\AzureApp.Common\AzureApp.Common.csproj">
+      <Project>{38FBA75B-5CF8-4E4D-95F0-5DA80AC23CC9}</Project>
+      <Name>AzureApp.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
