--- a/AzureApp/AzureApp.Data.Tests/AzureApp.Data.Tests.csproj
+++ b/AzureApp/AzureApp.Data.Tests/AzureApp.Data.Tests.csproj
@@ -62,6 +62,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\AzureApp.Data\AzureApp.Data.csproj">
+      <Project>{BBF66AA3-1736-45CE-87C1-A4AA18FD66AA}</Project>
+      <Name>AzureApp.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
