--- a/AzureApp/AzureApp.Entities.Tests/AzureApp.Entities.Tests.csproj
+++ b/AzureApp/AzureApp.Entities.Tests/AzureApp.Entities.Tests.csproj
@@ -62,6 +62,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\AzureApp.Entities\AzureApp.Entities.csproj">
+      <Project>{DA0B86EB-3848-4E6C-88A0-E22FCC93EAE1}</Project>
+      <Name>AzureApp.Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
