--- a/AzureApp.App/AzureApp.App.csproj
+++ b/AzureApp.App/AzureApp.App.csproj
@@ -171,7 +171,6 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -186,6 +185,16 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AzureApp.Data\AzureApp.Data.csproj">
+      <Project>{bbf66aa3-1736-45ce-87c1-a4aa18fd66aa}</Project>
+      <Name>AzureApp.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AzureApp.Entities\AzureApp.Entities.csproj">
+      <Project>{da0b86eb-3848-4e6c-88a0-e22fcc93eae1}</Project>
+      <Name>AzureApp.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
